Improve documentation (#42)
- Integrate MdDoclet so that docs generated from JavaDoc comments are now part of the techdocs.
- Improve test behaviors so that they do not break a build after test executions (workaround).